--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,24 +1,95 @@
 ﻿l_english:
-# Majors
+ :0 "NAME"
+ _DEF:0 "NAME"
+ _ADJ:0 "NAMEADJ"
+ _autonomy_ottoman_eyalet:0 "NAMEADJ Eyalet"
+ _autonomy_ottoman_eyalet_DEF:0 "the Eyalet of NAME"
+ _autonomy_ottoman_eyalet_ADJ:0 "NAMEADJ"
+ _autonomy_ottoman_khedive:0 "NAMEADJ Khedive"
+ _autonomy_ottoman_khedive_DEF:0 "the Khedive of NAME"
+ _autonomy_ottoman_khedive_ADJ:0 "NAMEADJ"
+# Non-Player Tags
  TES:0 "Africa"
  TES_DEF:0 "Africa"
  TES_ADJ:0 "African"
 
  EUR:0 "Europe"
  EUR_DEF:0 "Europe"
- EUR_ADJ:0 "Europe"
+ EUR_ADJ:0 "European"
+
+ ENG:0 "United Kingdom"
+ ENG_DEF:0 "the United Kingdom"
+ ENG_ADJ:0 "British"
+
+ HOL:0 "Netherlands"
+ HOL_DEF:0 "the Netherlands"
+ HOL_ADJ:0 "Dutch"
+
+ BEL:0 "Belgium"
+ BEL_DEF:0 "Belgium"
+ BEL_ADJ:0 "Belgian"
+
+ FRA:0 "France"
+ FRA_DEF:0 "France"
+ FRA_ADJ:0 "French"
+
+ SPR:0 "Spain"
+ SPR_DEF:0 "Spain"
+ SPR_ADJ:0 "Spanish"
+
+ ITA:0 "Italy"
+ ITA_DEF:0 "Italy"
+ ITA_ADJ:0 "Italian"
+
+ AUS:0 "Austria"
+ AUS_DEF:0 "Austria"
+ AUS_ADJ:0 "Austrian"
+
+ GER:0 "Germany"
+ GER_DEF:0 "Germany"
+ GER_ADJ:0 "German"
+
+ DEN:0 "Denmark"
+ DEN_DEF:0 "Denmark"
+ DEN_ADJ:0 "Danish"
+
+ SWE:0 "Sweden"
+ SWE_DEF:0 "Sweden"
+ SWE_ADJ:0 "Swedish"
+
+ RUS:0 "Russia"
+ RUS_DEF:0 "Russia"
+ RUS_ADJ:0 "Russian"
+
+ USA:0 "United States"
+ USA_DEF:0 "the United States"
+ USA_ADJ:0 "American"
+
+ CSA:0 "Confederated States"
+ CSA_DEF:0 "the Confederated States"
+ CSA_ADJ:0 "Dixie"
+
+ BRA:0 "Brazil"
+ BRA_DEF:0 "Brazil"
+ BRA_ADJ:0 "Brazilian"
+
+# Majors
+ POR:0 "Portugal"
+ POR_DEF:0 "Portugal"
+ POR_ADJ:0 "Portuguese"
 
  OTO:0 "Ottomans"
  OTO_DEF:0 "Ottomans"
  OTO_ADJ:0 "Ottomans"
 
  OMA:0 "Muscat and Oman"
- OMA_DEFA:0 "[OMA.GetRankDef]"
+ OMA_DEF:0 "Muscat and Oman"
  OMA_ADJ:0 "Omani"
 
- FRA:0 "France"
- FRA_DEF:0 "France"
- FRA_ADJ:0 "French"
+ SKT:0 "Sokoto"
+ SKT_DEF:0 "Sokoto"
+ SKT_ADJ:0 "Sokoto"
+
 # Europe
  ALB:0 "Albania"
  ALB_DEF:0 "Albania"
@@ -36,51 +107,147 @@
  RUM_DEF:0 "Rumelia"
  RUM_ADJ:0 "Rumelian"
 
-# Middle East
- KUR:0 "Kurdistan"
- KUR_DEF:0 "Kurdistan"
- KUR_ADJ:0 "Kurdish"
-
- ABN:0 "Arabistan"
- ABN_DEF:0 "Arabistan"
- ABN_ADJ:0 "Arab"
+# Persia
+ KLT:0 "Balouchistan"
+ KLT_DEF:0 "Balouchistan"
+ KLT_ADJ:0 "Balouchi"
+ KLT_autonomy_ottoman_eyalet:0 "Balouchi Eyalet"
+ KLT_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Balouchistan"
+ KLT_autonomy_ottoman_eyalet_ADJ:0 "Balouchi"
+ KLT_autonomy_ottoman_khedive:0 "Balouchi Khedive"
+ KLT_autonomy_ottoman_khedive_DEF:0 "the Khedive of Balouchistan"
+ KLT_autonomy_ottoman_khedive_ADJ:0 "Balouchi"
 
  PER:0 "Persia"
  PER_DEF:0 "Persia"
  PER_ADJ:0 "Persian"
+ PER_autonomy_ottoman_eyalet:0 "Persian Eyalet"
+ PER_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Persia"
+ PER_autonomy_ottoman_eyalet_ADJ:0 "Persian"
+ PER_autonomy_ottoman_khedive:0 "Persian Khedive"
+ PER_autonomy_ottoman_khedive_DEF:0 "the Khedive of Persia"
+ PER_autonomy_ottoman_khedive_ADJ:0 "Persian"
+
+ FAR:0 "Fars"
+ FAR_ADJ:0 "Fars"
+ FAR_DEF:0 "Farsi"
+ FAR_autonomy_ottoman_eyalet:0 "Farsi Eyalet"
+ FAR_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Fars"
+ FAR_autonomy_ottoman_eyalet_ADJ:0 "Farsi"
+ FAR_autonomy_ottoman_khedive:0 "Farsi Khedive"
+ FAR_autonomy_ottoman_khedive_DEF:0 "the Khedive of Fars"
+ FAR_autonomy_ottoman_khedive_ADJ:0 "Farsi"
+
+ ABN:0 "Arabistan"
+ ABN_DEF:0 "Arabistan"
+ ABN_ADJ:0 "Arab"
+ ABN_autonomy_ottoman_eyalet:0 "Arab Eyalet"
+ ABN_autonomy_ottoman_eyalet_DEF:0 "the Eyalet Arabistan"
+ ABN_autonomy_ottoman_eyalet_ADJ:0 "Arab"
+ ABN_autonomy_ottoman_khedive:0 "Arab Khedive"
+ ABN_autonomy_ottoman_khedive_DEF:0 "the Khedive of Arabistan"
+ ABN_autonomy_ottoman_khedive_ADJ:0 "Arab"
+# Levant
+ KUR:0 "Kurdistan"
+ KUR_DEF:0 "Kurdistan"
+ KUR_ADJ:0 "Kurdish"
+ KUR_autonomy_ottoman_eyalet:0 "Kurdish Eyalet"
+ KUR_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Kurdistan"
+ KUR_autonomy_ottoman_eyalet_ADJ:0 "Kurdish"
+ KUR_autonomy_ottoman_khedive:0 "Kurdish Khedive"
+ KUR_autonomy_ottoman_khedive_DEF:0 "the Khedive of Kurdistan"
+ KUR_autonomy_ottoman_khedive_ADJ:0 "Kurdish"
 
  IRQ:0 "Iraq"
  IRQ_DEF:0 "Iraq"
  IRQ_ADJ:0 "Iraqi"
+ IRQ_autonomy_ottoman_eyalet:0 "Iraqi Eyalet"
+ IRQ_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Iraq"
+ IRQ_autonomy_ottoman_eyalet_ADJ:0 "Iraqi"
+ IRQ_autonomy_ottoman_khedive:0 "Iraq Khedive"
+ IRQ_autonomy_ottoman_khedive_DEF:0 "the Khedive of Iraq"
+ IRQ_autonomy_ottoman_khedive_ADJ:0 "Iraqi"
+
+ ASY:0 "Assyria"
+ ASY_DEF:0 "Assyria"
+ ASY_ADJ:0 "Assyrian"
+ ASY_autonomy_ottoman_eyalet:0 "Assyrian Eyalet"
+ ASY_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Assyria"
+ ASY_autonomy_ottoman_eyalet_ADJ:0 "Assyrian"
+ ASY_autonomy_ottoman_khedive:0 "Assyrian Khedive"
+ ASY_autonomy_ottoman_khedive_DEF:0 "the Khedive of Assyria"
+ ASY_autonomy_ottoman_khedive_ADJ:0 "Assyrian"
 
  SYR:0 "Syria"
  SYR_DEF:0 "Syria"
  SYR_ADJ:0 "Syrian"
+ SYR_autonomy_ottoman_eyalet:0 "Syrian Eyalet"
+ SYR_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Syria"
+ SYR_autonomy_ottoman_eyalet_ADJ:0 "Syrian"
+ SYR_autonomy_ottoman_khedive:0 "Syrian Khedive"
+ SYR_autonomy_ottoman_khedive_DEF:0 "the Khedive of Syria"
+ SYR_autonomy_ottoman_khedive_ADJ:0 "Syrian"
 
  LEB:0 "Lebanon"
  LEB_DEF:0 "Lebanon"
  LEB_ADJ:0 "Lebanese"
+ LEB_autonomy_ottoman_eyalet:0 "Lebanese Eyalet"
+ LEB_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Lebanon"
+ LEB_autonomy_ottoman_eyalet_ADJ:0 "Lebanese"
+ LEB_autonomy_ottoman_khedive:0 "Lebanese Khedive"
+ LEB_autonomy_ottoman_khedive_DEF:0 "the Khedive of Lebanon"
+ LEB_autonomy_ottoman_khedive_ADJ:0 "Lebanese"
 
  PAL:0 "Palestine"
  PAL_DEF:0 "Palestine"
  PAL_ADJ:0 "Palestinean"
+ PAL_autonomy_ottoman_eyalet:0 "Palestinean Eyalet"
+ PAL_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Palestine"
+ PAL_autonomy_ottoman_eyalet_ADJ:0 "Palestinean"
+ PAL_autonomy_ottoman_khedive:0 "Palestinean Khedive"
+ PAL_autonomy_ottoman_khedive_DEF:0 "the Khedive of Palestine"
+ PAL_autonomy_ottoman_khedive_ADJ:0 "Palestinean"
 
  JOR:0 "Jordan"
  JOR_DEF:0 "Jordan"
- JOR_ADJ:0 "Jordani"
+ JOR_ADJ:0 "Hashemite"
+ JOR_autonomy_ottoman_eyalet:0 "Hashemite Eyalet"
+ JOR_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Jordan"
+ JOR_autonomy_ottoman_eyalet_ADJ:0 "Hashemite"
+ JOR_autonomy_ottoman_khedive:0 "Hashemite Khedive"
+ JOR_autonomy_ottoman_khedive_DEF:0 "the Khedive of Jordan"
+ JOR_autonomy_ottoman_khedive_ADJ:0 "Hashemite"
 
+ ERZ:0 "Israel"
+ ERZ_DEF:0 "Israel"
+ ERZ_ADJ:0 "Israeli"
+ ERZ_autonomy_ottoman_eyalet:0 "Israeli Eyalet"
+ ERZ_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Israel"
+ ERZ_autonomy_ottoman_eyalet_ADJ:0 "Israeli"
+ ERZ_autonomy_ottoman_khedive:0 "Israeli Khedive"
+ ERZ_autonomy_ottoman_khedive_DEF:0 "the Khedive of Israel"
+ ERZ_autonomy_ottoman_khedive_ADJ:0 "Israeli"
  KUW:0 "Kuwait"
  KUW_DEF:0 "Kuwait"
- KUW_ADJ:0 "Kuwaitean"
- KUW_autonomy_ottoman_eyalet:0 "Kuwait Eyalet"
- KUW_autonomy_ottoman_eyalet_DEF:0 "Kuwait Eyalet"
- KUW_autonomy_ottoman_eyalet_ADJ:0 "Kuwaitean"
+ KUW_ADJ:0 "Kuwaiti"
+ KUW_autonomy_ottoman_eyalet:0 "Kuwaiti Eyalet"
+ KUW_autonomy_ottoman_eyalet_DEF:0 "the Eyalet of Kuwait"
+ KUW_autonomy_ottoman_eyalet_ADJ:0 "Kuwaiti"
+ KUW_autonomy_ottoman_khedive:0 "Kuwaiti Khedive"
+ KUW_autonomy_ottoman_khedive_DEF:0 "the Khedive of Kuwait"
+ KUW_autonomy_ottoman_khedive_ADJ:0 "Kuwaiti"
 
-
- KLT:0 "Balouchistan"
- KLT_DEF:0 "Balouchistan"
- KLT_ADJ:0 "Balouchi"
+# Hejaz
 # Arabia
+:0 "NAME"
+ _DEF:0 "NAME"
+ _ADJ:0 "NAMEADJ"
+ _autonomy_ottoman_eyalet:0 "NAMEADJ Eyalet"
+ _autonomy_ottoman_eyalet_DEF:0 "the Eyalet of NAME"
+ _autonomy_ottoman_eyalet_ADJ:0 "NAMEADJ"
+ _autonomy_ottoman_khedive:0 "NAMEADJ Khedive"
+ _autonomy_ottoman_khedive_DEF:0 "the Khedive of NAME"
+ _autonomy_ottoman_khedive_ADJ:0 "NAMEADJ"
  BHR:0 "Bahrain"
  BHR_DEF:0 "Bahrain"
  BHR_ADJ:0 "Bahraini"
@@ -239,3 +406,4 @@
  TGR:0 "Touggourt"
  TGR_DEF:0 "Touggourt"
  TGR_ADJ:0 "Chaoui"
+
