--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -175,8 +175,8 @@
  STATE_174:0 "Sokoto"
  STATE_175:0 "Tillaberi"
  STATE_176:0 "Katsina"
- STATE_177:0 "Zinder"
- STATE_178:0 "Tahoua"
+ STATE_177:0 "Gobir"
+ STATE_178:0 "Arar"
  STATE_179:0 "Borno"
  STATE_180:0 "Yobe"
  STATE_181:0 "Adamawa"
@@ -210,7 +210,7 @@
  STATE_209:0 "Kossi"
  STATE_210:0 "Ouagadougou"
  STATE_211:0 "Yatenga"
- STATE_212:0 "Zanzourgou"
+ STATE_212:0 "Fada N'Gourma"
  STATE_213:0 "Kaabu"
  STATE_214:0 "Faranah"
  STATE_215:0 "Dinguiraye"
@@ -325,7 +325,7 @@
  STATE_324:0 "Kandi"
  STATE_325:0 "Nikki"
  STATE_326:0 "Kwuande"
- STATE_327:0 "Borgu"
+ STATE_327:0 "Bussa"
  STATE_328:0 "Awori"
  STATE_329:0 "Ketu"
  STATE_330:0 "Sabe Idassa"
@@ -335,25 +335,25 @@
  STATE_334:0 "Igala"
  STATE_335:0 "Nigeria1"
  STATE_336:0 "Nigeria2"
- STATE_337:0 "Nigeria2"
- STATE_338:0 "Aro"
- STATE_339:0 "Nri"
- STATE_340:0 "Nupe"
- STATE_341:0 "Zamfara"
- STATE_342:0 "Ife"
- STATE_343:0 "Oyo"
- STATE_344:0 "Warri"
- STATE_345:0 "Igala"
+ STATE_337:0 "Aro"
+ STATE_338:0 "Nri"
+ STATE_339:0 "Ijaw"
+ STATE_340:0 "Zuru"
+ STATE_341:0 "West Nupe"
+ STATE_342:0 "Zamfara"
+ STATE_343:0 "Ife"
+ STATE_344:0 "Oyo"
+ STATE_345:0 "Warri"
  STATE_346:0 "Urhobo"
  STATE_347:0 "Ondo"
  STATE_348:0 "Kogi"
- STATE_349:0 "Eggan"
+ STATE_349:0 "East Nupe"
  STATE_350:0 "Nassarawa"
- STATE_351:0 "Kaduna"
+ STATE_351:0 "Zaria"
  STATE_352:0 "Zazzau"
  STATE_353:0 "Gombe"
- STATE_354:0 "Diffa"
- STATE_355:0 "Damagram"
+ STATE_354:0 "Kadzell"
+ STATE_355:0 "Damagaram"
  STATE_356:0 "Derna"
  STATE_357:0 "Benghasi"
  STATE_358:0 "Sirte"
@@ -363,28 +363,28 @@
  STATE_362:0 "Gafsa"
  STATE_363:0 "Kef"
  STATE_364:0 "Daura"
- STATE_365:0 "Georgia"
- STATE_366:0 "Florida"
- STATE_367:0 "Alabama"
- STATE_368:0 "Tennessee"
- STATE_369:0 "Kentucky"
- STATE_370:0 "Mississippi"
- STATE_371:0 "Louisiana"
- STATE_372:0 "Arkansas"
- STATE_373:0 "Missouri"
- STATE_374:0 "Oklahoma"
- STATE_375:0 "Texas"
- STATE_376:0 "New Mexico"
- STATE_377:0 "Arizona"
- STATE_378:0 "California"
- STATE_379:0 "Nevada"
- STATE_380:0 "Utah"
- STATE_381:0 "Wyoming"
- STATE_382:0 "Colorado"
- STATE_383:0 "Kansas"
- STATE_384:0 "Nebraska"
- STATE_385:0 "Oregon"
- STATE_386:0 "Washington"
+ STATE_365:0 "Serrekuna"
+ STATE_366:0 "Abyan"
+ STATE_367:0 "Beihan"
+ STATE_368:0 "Aulaqi"
+ STATE_369:0 "Yafa"
+ STATE_370:0 "Kebbi"
+ STATE_371:0 "Ibibio"
+ STATE_372:0 "Igbo"
+ STATE_373:0 "Bamenda"
+ STATE_374:0 "Idoma"
+ STATE_375:0 "Tiv"
+ STATE_376:0 "Jakun"
+ STATE_377:0 "Jos"
+ STATE_378:0 "Muniyo"
+ STATE_379:0 "Bedde"
+ STATE_380:0 "Marghi"
+ STATE_381:0 "Koto-Ko"
+ STATE_382:0 "Logone"
+ STATE_383:0 "Gwari"
+ STATE_384:0 "Lafia"
+ STATE_385:0 "Bauchi"
+ STATE_386:0 "Tenkodogo"
  STATE_387:0 "Idaho"
  STATE_388:0 "Montana"
  STATE_389:0 "North Dakota"
