--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -387,19 +387,19 @@
  STATE_386:0 "Tenkodogo"
  STATE_387:0 "Idaho"
  STATE_388:0 "Tatouine"
- STATE_389:0 "North Dakota"
- STATE_390:0 "Sabha"
- STATE_391:0 "Minnesota"
- STATE_392:0 "Iowa"
- STATE_393:0 "Michigan"
- STATE_394:0 "Wisconsin"
- STATE_395:0 "Illinois"
- STATE_396:0 "Indiana"
- STATE_397:0 "Syktyvkar"
- STATE_398:0 "Perm"
- STATE_399:0 "Izhevsk"
- STATE_400:0 "Kirov"
- STATE_401:0 "Engels"
+ STATE_389:0 "Airlit"
+ STATE_390:0 "Agadez"
+ STATE_391:0 "Sabha"
+ STATE_392:0 "Ghadames"
+ STATE_393:0 "Tajarah"
+ STATE_394:0 "Bilma"
+ STATE_395:0 "Shaharah"
+ STATE_396:0 "Hajjah"
+ STATE_397:0 "Al Hudayah"
+ STATE_398:0 "Monkhafad el Qattara"
+ STATE_399:0 "Matruh"
+ STATE_400:0 "Qena"
+ STATE_401:0 "Kolda"
  STATE_402:0 "Akhtubinsk"
  STATE_403:0 "Tyumen"
  STATE_404:0 "Kyzyl Orda"
