--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -14,7 +14,7 @@
  STATE_13:0 "West Aegean Islands"
  STATE_14:0 "Ankara"
  STATE_15:0 "Adana"
- STATE_16:0 "Palestine"
+ STATE_16:0 "Judea"
  STATE_17:0 "Lebanon"
  STATE_18:0 "Syria"
  STATE_19:0 "Transjordan"
@@ -400,11 +400,11 @@
  STATE_399:0 "Matruh"
  STATE_400:0 "Qena"
  STATE_401:0 "Kolda"
- STATE_402:0 "Akhtubinsk"
- STATE_403:0 "Tyumen"
- STATE_404:0 "Kyzyl Orda"
- STATE_405:0 "Tashkent"
- STATE_406:0 "Guryev"
+ STATE_402:0 "Galilee"
+ STATE_403:0 "Samaria"
+ STATE_404:0 "Gaza"
+ STATE_405:0 "Abha"
+ STATE_406:0 "Al Haridhah"
  STATE_407:0 "Ural'sk"
  STATE_408:0 "Vladivostok"
  STATE_409:0 "Khabarovsk"
@@ -452,7 +452,7 @@
  STATE_451:0 "Derna"
  STATE_452:0 "Marsa Matruh"
  STATE_453:0 "Sinai"
- STATE_454:0 "Palestine"
+ STATE_454:0 "Judea"
  STATE_455:0 "Jordan"
  STATE_456:0 "Aswan"
  STATE_457:0 "Eastern Desert"
