Running around adding 2 religions to a dozen files. NO NEW RELIGIONS

--- a/localisation/laws_l_english.yml
+++ b/localisation/laws_l_english.yml
@@ -3,51 +3,75 @@
  law_country_defines_desc:0 ""
   law_country_power:0 "State Rank"
   law_country_power_desc:0 ""
-   law_country_power_irrelevant:0 "Irrelevant Power"
-   law_country_power_irrelevant_desc:0 ""
-   law_country_power_minor:0 "Minor Power"
-   law_country_power_minor_desc:0 ""
-   law_country_power_secondary:0 "Secondary Power"
-   law_country_power_secondary_desc:0 ""
    law_country_power_great:0 "Great Power"
    law_country_power_great_desc:0 ""
+   law_country_power_secondary:0 "Secondary Power"
+   law_country_power_secondary_desc:0 ""
+   law_country_power_minor:0 "Minor Power"
+   law_country_power_minor_desc:0 ""
+   law_country_power_irrelevant:0 "Irrelevant Power"
+   law_country_power_irrelevant_desc:0 ""
   law_country_religion:0 "State Religion"
   law_country_religion_desc:0 ""
    law_country_religion_animist:0 "Animist"
    law_country_religion_animist_desc:0 ""
+   law_country_religion_animist_trigger_tt:0 " Majority Religion is §YAnimist§!"
    law_country_religion_fetishist:0 "Fetishist"
    law_country_religion_fetishist_desc:0 ""
+   law_country_religion_fetishist_trigger_tt:0 " Majority Religion is §YFetishist§!"
+   law_country_religion_ancestorship:0 "Ancestorship"
+   law_country_religion_ancestorship_desc:0 ""
+   law_country_religion_ancestorship_trigger_tt:0 " Majority Religion is §YAncestorship§!"
+   law_country_religion_mossi:0 "Fetishist"
+   law_country_religion_mossi_desc:0 ""
+   law_country_religion_mossi_trigger_tt:0 " Majority Religion is §YMossi§!"
    law_country_religion_zoroastrian:0 "Zoroastrian"
    law_country_religion_zoroastrian_desc:0 ""
+   law_country_religion_zoroastrian_trigger_tt:0 " Majority Religion is §YZoroastrian§!"
    law_country_religion_jewish:0 "Jewish"
    law_country_religion_jewish_desc:0 ""
+   law_country_religion_jewish_trigger_tt:0 " Majority Religion is §YJewish§!"
+   law_country_religion_druze:0 "Druze"
+   law_country_religion_druze_desc:0 ""
+   law_country_religion_druze_trigger_tt:0 " Majority Religion is §YDruze§!"
+   law_country_religion_waaqist:0 "Waaqist"
+   law_country_religion_waaqist_desc:0 ""
+   law_country_religion_waaqist_trigger_tt:0 " Majority Religion is §YWaaqist§!"
    law_country_religion_catholic:0 "Catholic"
    law_country_religion_catholic_desc:0 ""
+   law_country_religion_catholic_trigger_tt:0 " Majority Religion is §YCatholic§!"
    law_country_religion_anglican:0 "[GetAnglicanType]"
    law_country_religion_anglican_desc:0 ""
    law_country_religion_anglican_anglican:0 "Anglican"
    law_country_religion_anglican_reformed:0 "Reformed"
+   law_country_religion_anglican_trigger_tt:0 " Majority Religion is §Y[GetAnglicanType]§!"
    law_country_religion_protestant:0 "Protestant"
    law_country_religion_protestant_desc:0 ""
-   law_country_religion_orthodox:0 "Orthodox"
+   law_country_religion_protestant_trigger_tt:0 " Majority Religion is §YProtestant§!"
+   law_country_religion_orthodox:0 "Orthodox]"
    law_country_religion_orthodox_desc:0 ""
+   law_country_religion_orthodox_trigger_tt:0 " Majority Religion is §YOrthodox§!"
    law_country_religion_orthodox_greek:0 "Greek Orthodox"
    law_country_religion_orthodox_armeninan:0 "Armenian"
    law_country_religion_orthodox_orthodox:0 "Orthodox"
-   law_country_religion_coptic:0 "Coptic"
+   law_country_religion_coptic:0 "Copt"
    law_country_religion_coptic_desc:0 ""
-   law_country_religion_druze:0 "Druze"
-   law_country_religion_druze_desc:0 ""
+   law_country_religion_coptic_trigger_tt:0 " Majority Religion is §YCopt§!"
    law_country_religion_sunni:0 "Sunni"
    law_country_religion_sunni_desc:0 ""
+   law_country_religion_sunni_trigger_tt:0 " Majority Religion is §YSunni§!"
    law_country_religion_shiite:0 "Shiite"
    law_country_religion_shiite_desc:0 ""
+   law_country_religion_shiite_trigger_tt:0 " Majority Religion is §YShiite§!"
    law_country_religion_ibadi:0 "Ibadi"
    law_country_religion_ibadi_desc:0 ""
+   law_country_religion_ibadi_trigger_tt:0 " Majority Religion is §YIbadi§!"
    law_country_religion_cult_of_personality:0 "Cult of Personality"
    law_country_religion_cult_of_personality_desc:0 ""
+   law_country_religion_cult_of_personality_trigger_tt:0 " Majority Religion is §YCult of Personality§!"
    law_country_religion_atheist:0 "Atheist"
    law_country_religion_atheist_desc:0 ""
+   law_country_religion_atheist_trigger_tt:0 " Majority Religion is §YAtheist§!"
    law_country_religion_secular:0 "Secular"
    law_country_religion_secular_desc:0 ""
   law_country_culture:0 "State Culture"
