--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -173,7 +173,7 @@
  STATE_172:0 "Dendi"
  STATE_173:0 "Dosso"
  STATE_174:0 "Sokoto"
- STATE_175:0 "Tillaberi"
+ STATE_175:0 "Téra"
  STATE_176:0 "Katsina"
  STATE_177:0 "Gobir"
  STATE_178:0 "Arar"
@@ -411,7 +411,7 @@
  STATE_410:0 "Sistan"
  STATE_411:0 "Isfahan"
  STATE_412:0 "Fars"
- STATE_413:0 "Khuzestan"
+ STATE_413:0 "Pama"
  STATE_414:0 "Kerman"
  STATE_415:0 "Herat"
  STATE_416:0 "Khorasan"
