NIGERIA AND CHAD COUNTRIES (CHAD NEEDS COLORS

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -254,9 +254,9 @@
  STATE_253:0 "Walata"
  STATE_254:0 "El Hodh"
  STATE_255:0 "Saint Louis"
- STATE_256:0 "Baol"
- STATE_257:0 "Siine"
- STATE_258:0 "Saloum"
+ STATE_256:0 "Dakar"
+ STATE_257:0 "Baol"
+ STATE_258:0 "Siine"
  STATE_259:0 "Toro"
  STATE_260:0 "Jolof"
  STATE_261:0 "Matam"
@@ -339,14 +339,14 @@
  STATE_338:0 "Nri"
  STATE_339:0 "Ijaw"
  STATE_340:0 "Zuru"
- STATE_341:0 "West Nupe"
+ STATE_341:0 "Kontagora"
  STATE_342:0 "Zamfara"
  STATE_343:0 "Ife"
  STATE_344:0 "Oyo"
  STATE_345:0 "Warri"
  STATE_346:0 "Urhobo"
  STATE_347:0 "Ondo"
- STATE_348:0 "Kogi"
+ STATE_348:0 "Bida"
  STATE_349:0 "East Nupe"
  STATE_350:0 "Nassarawa"
  STATE_351:0 "Zaria"
@@ -385,7 +385,7 @@
  STATE_384:0 "Lafia"
  STATE_385:0 "Bauchi"
  STATE_386:0 "Tenkodogo"
- STATE_387:0 "Idaho"
+ STATE_387:0 "Saba"
  STATE_388:0 "Tatouine"
  STATE_389:0 "Airlit"
  STATE_390:0 "Agadez"
@@ -405,46 +405,46 @@
  STATE_404:0 "Gaza"
  STATE_405:0 "Abha"
  STATE_406:0 "Al Haridhah"
- STATE_407:0 "Ural'sk"
- STATE_408:0 "Vladivostok"
- STATE_409:0 "Khabarovsk"
- STATE_410:0 "Sistan"
- STATE_411:0 "Isfahan"
- STATE_412:0 "Fars"
+ STATE_407:0 "Ardalan"
+ STATE_408:0 "Sey"
+ STATE_409:0 "Dofondoutchi"
+ STATE_410:0 "Gurungu"
+ STATE_411:0 "Bilanga"
+ STATE_412:0 "Koala"
  STATE_413:0 "Pama"
- STATE_414:0 "Kerman"
- STATE_415:0 "Herat"
- STATE_416:0 "Khorasan"
- STATE_417:0 "Hamadan"
- STATE_418:0 "Semnan"
- STATE_419:0 "Tibriz"
- STATE_420:0 "Gilan"
- STATE_421:0 "Kurdistan"
- STATE_422:0 "Ceylon"
- STATE_423:0 "Madurai"
- STATE_424:0 "Madras"
- STATE_425:0 "Mysore"
- STATE_426:0 "Orissa"
- STATE_427:0 "Hyderabad"
- STATE_428:0 "Gujarat"
- STATE_429:0 "Bombay"
- STATE_430:0 "East Bengal"
- STATE_431:0 "West Bengal"
- STATE_432:0 "Assam"
- STATE_433:0 "Rajahsthan"
- STATE_434:0 "Arunachal Pradesh"
- STATE_435:0 "Bihar"
- STATE_436:0 "Jabalpur"
- STATE_437:0 "Indore"
- STATE_438:0 "Lucknow"
- STATE_439:0 "Delhi"
- STATE_440:0 "Punjab"
- STATE_441:0 "Kashmir"
- STATE_442:0 "Peshawar"
- STATE_443:0 "Sind"
- STATE_444:0 "Baluchistan"
- STATE_445:0 "Quetta"
- STATE_446:0 "Cairo"
+ STATE_414:0 "Goure"
+ STATE_415:0 "Maradi"
+ STATE_416:0 "Kokoro"
+ STATE_417:0 "Bosoma"
+ STATE_418:0 "Liptako"
+ STATE_419:0 "Wa"
+ STATE_420:0 "Beregadougou"
+ STATE_421:0 "Kenedougou"
+ STATE_422:0 "Boffa"
+ STATE_423:0 "Wasoulou"
+ STATE_424:0 "Konyan"
+ STATE_425:0 "Dabakala"
+ STATE_426:0 "Ibadan"
+ STATE_427:0 "Ekit"
+ STATE_428:0 "Kogi"
+ STATE_429:0 "Katagum"
+ STATE_430:0 "Wase"
+ STATE_431:0 "Ningi"
+ STATE_432:0 "Dar Runga"
+ STATE_433:0 "Wun"
+ STATE_434:0 "Masena"
+ STATE_435:0 "Abeshr"
+ STATE_436:0 "Kanya"
+ STATE_437:0 "Sara"
+ STATE_438:0 "Mayo-Kebi"
+ STATE_439:0 "Guera"
+ STATE_440:0 "Dar Tama"
+ STATE_441:0 "Dar Zaghawa"
+ STATE_442:0 "Kobbe"
+ STATE_443:0 "Dar Fur"
+ STATE_444:0 "Dar Simyar"
+ STATE_445:0 "Mandara"
+ STATE_446:0 "Maiduguri"
  STATE_447:0 "Alexandria"
  STATE_448:0 "Tripoli"
  STATE_449:0 "El Agheila"
