--- a/localisation/country_l_english.yml
+++ b/localisation/country_l_english.yml
@@ -1,7 +1,9 @@
 ﻿l_english:
+ CURRENT_COUNTRY_POWER:0 "[ROOT.GetNationalPowerTextIcon] [?ROOT.score_array_position_var]"
  COUNTRY_POWER:0 "§C[ROOT.GetNameDef]§! is the [?ROOT.score_array_position_var] place §Y[ROOT.GetNationalPower]§!"
  POLITICAL_POWER:0 "Political Favors"
  POLITICAL_POWER_DESC:0 "How much Political Favors the leaders of this country have."
+ CURRENT_PROSPERITY:0 "[?ROOT.prosperity]"
  PROSPERITY:0 "§YProsperity§!"
  PROSPERITY_DELAYED:0 "How much prosperity this country has garnered"
  COMMAND_POWER:0 "Command Power"
@@ -33,8 +35,12 @@
  WAR_SUPPORT_HEROES_BEING_KILLED:0 "War Heroes Being Killed: $VALUE|+=2%$"
  WAR_SUPPORT_CONVOYS_BEING_RAIDED:0 "Trade Convoys Being Raided: $VALUE|+=2%$"
  WAR_SUPPORT_PROPAGANDA:0 "£operative_mission_icons_small|8£ Foreign Propaganda: $VALUE|+=2%$"
+ CURRENT_LEGITIMACY:0 "[?ROOT.legitimacy|%2]"
  LEGITIMACY:0 "§YLegitimacy§!"
  LEGITIMACY_DELAYED:0 "How much legitimacy the government has on its people."
+ CURRENT_ADMINISTRATIVE_CAPACITY:0 "[?ROOT.capacity]/[?ROOT.capacity_limit]"
+ ADMINISTRATIVE_CAPACITY:0 "§YAdministrative Capacity§!"
+ ADMINISTRATIVE_CAPACITY_DELAYED:0 "Administrative Capacity regards how much bureaucratic infrastracture the country can maintain for governing"
  MANPOWER:0 "Manpower"
  SERVICE_MANPOWER:1 "£manpower_texticon  Service Manpower:"
  SERVICE_MANPOWER_DESC:0 "Service manpower is used by different types of equipment to maintain its functionality."
