topbar changes pt 3

--- a/localisation/country_l_english.yml
+++ b/localisation/country_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
- CURRENT_COUNTRY_POWER:0 "[ROOT.GetNationalPowerTextIcon] [?ROOT.score_array_position_var]"
- COUNTRY_POWER:0 "§C[ROOT.GetNameDef]§! is the [?ROOT.score_array_position_var] place §Y[ROOT.GetNationalPower]§!"
+ CURRENT_COUNTRY_POWER:0 "[ROOT.GetNationalPowerTextIcon]  [?ROOT.prestige_total_position]th Place ([?ROOT.prestige_total])"
+ COUNTRY_POWER:0 "§C[ROOT.GetNameDef]§! is the [?ROOT.score_array_position_var]th place §Y[ROOT.GetNationalPower]§!"
  POLITICAL_POWER:0 "Political Favors"
- POLITICAL_POWER_DESC:0 "How much Political Favors the leaders of this country have."
+ POLITICAL_POWER_DESC:0 "How much Political Favors the leaders of this country £prosperity have."
  CURRENT_PROSPERITY:0 "[?ROOT.prosperity]"
  PROSPERITY:0 "§YProsperity§!"
  PROSPERITY_DELAYED:0 "How much prosperity this country has garnered"
@@ -35,8 +35,8 @@
  WAR_SUPPORT_HEROES_BEING_KILLED:0 "War Heroes Being Killed: $VALUE|+=2%$"
  WAR_SUPPORT_CONVOYS_BEING_RAIDED:0 "Trade Convoys Being Raided: $VALUE|+=2%$"
  WAR_SUPPORT_PROPAGANDA:0 "£operative_mission_icons_small|8£ Foreign Propaganda: $VALUE|+=2%$"
- CURRENT_LEGITIMACY:0 "[?ROOT.legitimacy|%2]"
- LEGITIMACY:0 "§YLegitimacy§!"
+ CURRENT_LEGITIMACY:0 "[?ROOT.political_legitimacy|0%]"
+ LEGITIMACY:0 "§YLegitimacy§!\nCurrent Legitimacy is [?ROOT.political_legitimacy|2%]"
  LEGITIMACY_DELAYED:0 "How much legitimacy the government has on its people."
  CURRENT_ADMINISTRATIVE_CAPACITY:0 "[?ROOT.capacity]/[?ROOT.capacity_limit]"
  ADMINISTRATIVE_CAPACITY:0 "§YAdministrative Capacity§!"
