--- a/localisation/country_l_english.yml
+++ b/localisation/country_l_english.yml
@@ -4,9 +4,9 @@
  COUNTRY_POWER:0 "§C[ROOT.GetNameDef]§! is the [?ROOT.score_array_position_var]th place §Y[ROOT.GetNationalPower]§!"
  POLITICAL_POWER:0 "Political Favors"
  POLITICAL_POWER_DESC:0 "How much Political Favors the leaders of this country £prosperity have."
- CURRENT_PROSPERITY:0 "[?ROOT.prosperity]"
- PROSPERITY:0 "§YProsperity§!"
- PROSPERITY_DELAYED:0 "How much prosperity this country has garnered"
+ CURRENT_PROSPERITY:0 "[?ROOT.afr_prosperity_mechanic_value]"
+ PROSPERITY:0 "§YProsperity§!\nGrowth per 90 days:\n[afr_peacetime_economy_base_income_scripted][afr_peacetime_economy_base_prosperity_colonial_company_scripted][afr_peacetime_state_prosperity_growth_scripted]\n[afr_peacetime_state_prosperity_base_income_upgrade_scripted]"
+ PROSPERITY_DELAYED:0 "If our empire has zero §RWar Exhaustion§!, Prosperity will §Gaccumulate§! every §Y90§! days."
  COMMAND_POWER:0 "Command Power"
  COMMAND_POWER_DESC:0 "§HCommand Power§! is used for various military operations and promotion of generals. It can be spent on one time operations or it can be allocated for continous operations. Growth and maximum capacity of §HCommand Power§! can be increased by various Doctrines and National Spirits."
  CURRENT_COMMAND_POWER_TOPBAR:0 "§TCurrent Command Power: $VALUE|G1$§!"
