--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -550,6 +550,97 @@
  GDC_imperialism_ADJ:0 "Dutch"
  GDC_fundamentalism_ADJ:0 "Dutch"
  
+ KNO_reformism:0 "Kano"
+ KNO_traditionalism:0 "Kano"
+ KNO_imperialism:0 "Kano"
+ KNO_fundamentalism:0 "Emirate of Kano"
+ KNO_reformism_DEF:0 "Kano"
+ KNO_traditionalism_DEF:0 "Kano"
+ KNO_imperialism_DEF:0 "Kano"
+ KNO_fundamentalism_DEF:0 "The Kano Emirate"
+ KNO_reformism_ADJ:0 "Kano"
+ KNO_traditionalism_ADJ:0 "Kano"
+ KNO_imperialism_ADJ:0 "Kano"
+ KNO_fundamentalism_ADJ:0 "Kano"
+ 
+ NIN_reformism:0 "Ningi"
+ NIN_traditionalism:0 "Ningi"
+ NIN_imperialism:0 "Ningi"
+ NIN_fundamentalism:0 "Emirate of Ningi"
+ NIN_reformism_DEF:0 "Ningi"
+ NIN_traditionalism_DEF:0 "Ningi"
+ NIN_imperialism_DEF:0 "Ningi"
+ NIN_fundamentalism_DEF:0 "The Ningi Emirate"
+ NIN_reformism_ADJ:0 "Ningi"
+ NIN_traditionalism_ADJ:0 "Ningi"
+ NIN_imperialism_ADJ:0 "Ningi"
+ NIN_fundamentalism_ADJ:0 "Ningi"
+ 
+ BID_reformism:0 "Bida"
+ BID_traditionalism:0 "Bida"
+ BID_imperialism:0 "Bida"
+ BID_fundamentalism:0 "Emirate of Bida"
+ BID_reformism_DEF:0 "Bida"
+ BID_traditionalism_DEF:0 "Bida"
+ BID_imperialism_DEF:0 "Bida"
+ BID_fundamentalism_DEF:0 "The Bida Emirate"
+ BID_reformism_ADJ:0 "Bida"
+ BID_traditionalism_ADJ:0 "Bida"
+ BID_imperialism_ADJ:0 "Bida"
+ BID_fundamentalism_ADJ:0 "Bida"
+ 
+ GWI_reformism:0 "Gwari"
+ GWI_traditionalism:0 "Gwari"
+ GWI_imperialism:0 "Gwari"
+ GWI_fundamentalism:0 "Emirate of Gwari"
+ GWI_reformism_DEF:0 "Gwari"
+ GWI_traditionalism_DEF:0 "Gwari"
+ GWI_imperialism_DEF:0 "Gwari"
+ GWI_fundamentalism_DEF:0 "The Gwari Emirate"
+ GWI_reformism_ADJ:0 "Gwari"
+ GWI_traditionalism_ADJ:0 "Gwari"
+ GWI_imperialism_ADJ:0 "Gwari"
+ GWI_fundamentalism_ADJ:0 "Gwari"
+ 
+ ZUU_reformism:0 "Zuru"
+ ZUU_traditionalism:0 "Zuru"
+ ZUU_imperialism:0 "Zuru"
+ ZUU_fundamentalism:0 "Emirate of Zuru"
+ ZUU_reformism_DEF:0 "Zuru"
+ ZUU_traditionalism_DEF:0 "Zuru"
+ ZUU_imperialism_DEF:0 "Zuru"
+ ZUU_fundamentalism_DEF:0 "The Zuru Emirate"
+ ZUU_reformism_ADJ:0 "Zuru"
+ ZUU_traditionalism_ADJ:0 "Zuru"
+ ZUU_imperialism_ADJ:0 "Zuru"
+ ZUU_fundamentalism_ADJ:0 "Zuru"
+ 
+ ADA_reformism:0 "Adar"
+ ADA_traditionalism:0 "Adar"
+ ADA_imperialism:0 "Adar"
+ ADA_fundamentalism:0 "Emirate of Adar"
+ ADA_reformism_DEF:0 "Adar"
+ ADA_traditionalism_DEF:0 "Adar"
+ ADA_imperialism_DEF:0 "Adar"
+ ADA_fundamentalism_DEF:0 "The Adar Emirate"
+ ADA_reformism_ADJ:0 "Adar"
+ ADA_traditionalism_ADJ:0 "Adar"
+ ADA_imperialism_ADJ:0 "Adar"
+ ADA_fundamentalism_ADJ:0 "Adar"
+ 
+ KBI_reformism:0 "Kebbi"
+ KBI_traditionalism:0 "Kebbi"
+ KBI_imperialism:0 "Kebbi"
+ KBI_fundamentalism:0 "Emirate of Kebbi"
+ KBI_reformism_DEF:0 "Kebbi"
+ KBI_traditionalism_DEF:0 "Kebbi"
+ KBI_imperialism_DEF:0 "Kebbi"
+ KBI_fundamentalism_DEF:0 "The Kebbi Emirate"
+ KBI_reformism_ADJ:0 "Kebbi"
+ KBI_traditionalism_ADJ:0 "Kebbi"
+ KBI_imperialism_ADJ:0 "Kebbi"
+ KBI_fundamentalism_ADJ:0 "Kebbi"
+ 
  
  CAU_traditionalism:0 "Caucasian Imamate"
  KHI_traditionalism:0 "Khiva"
