--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -642,6 +642,111 @@
  KBI_fundamentalism_ADJ:0 "Kebbi"
  
  
+ KNM_reformism:0 "Kanem"
+ KNM_traditionalism:0 "Kanem"
+ KNM_imperialism:0 "Kanem"
+ KNM_fundamentalism:0 "Kanem"
+ KNM_reformism_DEF:0 "Kanem"
+ KNM_traditionalism_DEF:0 "Kanem"
+ KNM_imperialism_DEF:0 "Kanem"
+ KNM_fundamentalism_DEF:0 "Kanem"
+ KNM_reformism_ADJ:0 "Kanem"
+ KNM_traditionalism_ADJ:0 "Kanem"
+ KNM_imperialism_ADJ:0 "Kanem"
+ KNM_fundamentalism_ADJ:0 "Kanem"
+ 
+ BAG_reformism:0 "Bagirmi"
+ BAG_traditionalism:0 "Bagirmi"
+ BAG_imperialism:0 "Bagirmi"
+ BAG_fundamentalism:0 "Emirate of Bagirmi"
+ BAG_reformism_DEF:0 "Bagirmi"
+ BAG_traditionalism_DEF:0 "Bagirmi"
+ BAG_imperialism_DEF:0 "Bagirmi"
+ BAG_fundamentalism_DEF:0 "The Bagirmi Emirate"
+ BAG_reformism_ADJ:0 "Bagirmi"
+ BAG_traditionalism_ADJ:0 "Bagirmi"
+ BAG_imperialism_ADJ:0 "Bagirmi"
+ BAG_fundamentalism_ADJ:0 "Bagirmi"
+ 
+ GBR_reformism:0 "Gobir"
+ GBR_traditionalism:0 "Gobir"
+ GBR_imperialism:0 "Gobir"
+ GBR_fundamentalism:0 "Emirate of Gobir"
+ GBR_reformism_DEF:0 "Gobir"
+ GBR_traditionalism_DEF:0 "Gobir"
+ GBR_imperialism_DEF:0 "Gobir"
+ GBR_fundamentalism_DEF:0 "The Gobir Emirate"
+ GBR_reformism_ADJ:0 "Gobir"
+ GBR_traditionalism_ADJ:0 "Gobir"
+ GBR_imperialism_ADJ:0 "Gobir"
+ GBR_fundamentalism_ADJ:0 "Gobir"
+ 
+ BDE_reformism:0 "Bedde"
+ BDE_traditionalism:0 "Bedde"
+ BDE_imperialism:0 "Bedde"
+ BDE_fundamentalism:0 "Emirate of Bedde"
+ BDE_reformism_DEF:0 "Bedde"
+ BDE_traditionalism_DEF:0 "Bedde"
+ BDE_imperialism_DEF:0 "Bedde"
+ BDE_fundamentalism_DEF:0 "The Bedde Emirate"
+ BDE_reformism_ADJ:0 "Bedde"
+ BDE_traditionalism_ADJ:0 "Bedde"
+ BDE_imperialism_ADJ:0 "Bedde"
+ BDE_fundamentalism_ADJ:0 "Bedde"
+ 
+ GUE_reformism:0 "Goure"
+ GUE_traditionalism:0 "Goure"
+ GUE_imperialism:0 "Goure"
+ GUE_fundamentalism:0 "Emirate of Goure"
+ GUE_reformism_DEF:0 "Goure"
+ GUE_traditionalism_DEF:0 "Goure"
+ GUE_imperialism_DEF:0 "Goure"
+ GUE_fundamentalism_DEF:0 "The Goure Emirate"
+ GUE_reformism_ADJ:0 "Goure"
+ GUE_traditionalism_ADJ:0 "Goure"
+ GUE_imperialism_ADJ:0 "Goure"
+ GUE_fundamentalism_ADJ:0 "Goure"
+ 
+ KRI_reformism:0 "Kerri Kerri"
+ KRI_traditionalism:0 "Kerri Kerri"
+ KRI_imperialism:0 "Kerri Kerri"
+ KRI_fundamentalism:0 "Emirate of Kerri Kerri"
+ KRI_reformism_DEF:0 "Kerri Kerri"
+ KRI_traditionalism_DEF:0 "Kerri Kerri"
+ KRI_imperialism_DEF:0 "Kerri Kerri"
+ KRI_fundamentalism_DEF:0 "The Kerri Kerri Emirate"
+ KRI_reformism_ADJ:0 "Kerri Kerri"
+ KRI_traditionalism_ADJ:0 "Kerri Kerri"
+ KRI_imperialism_ADJ:0 "Kerri Kerri"
+ KRI_fundamentalism_ADJ:0 "Kerri Kerri"
+ 
+ MGH_reformism:0 "Marghi"
+ MGH_traditionalism:0 "Marghi"
+ MGH_imperialism:0 "Marghi"
+ MGH_fundamentalism:0 "Emirate of Marghi"
+ MGH_reformism_DEF:0 "Marghi"
+ MGH_traditionalism_DEF:0 "Marghi"
+ MGH_imperialism_DEF:0 "Marghi"
+ MGH_fundamentalism_DEF:0 "The Marghi Emirate"
+ MGH_reformism_ADJ:0 "Marghi"
+ MGH_traditionalism_ADJ:0 "Marghi"
+ MGH_imperialism_ADJ:0 "Marghi"
+ MGH_fundamentalism_ADJ:0 "Marghi"
+ 
+ MYO_reformism:0 "Muniyo"
+ MYO_traditionalism:0 "Muniyo"
+ MYO_imperialism:0 "Muniyo"
+ MYO_fundamentalism:0 "Emirate of Muniyo"
+ MYO_reformism_DEF:0 "Muniyo"
+ MYO_traditionalism_DEF:0 "Muniyo"
+ MYO_imperialism_DEF:0 "Muniyo"
+ MYO_fundamentalism_DEF:0 "The Muniyo Emirate"
+ MYO_reformism_ADJ:0 "Muniyo"
+ MYO_traditionalism_ADJ:0 "Muniyo"
+ MYO_imperialism_ADJ:0 "Muniyo"
+ MYO_fundamentalism_ADJ:0 "Muniyo"
+ 
+ 
  CAU_traditionalism:0 "Caucasian Imamate"
  KHI_traditionalism:0 "Khiva"
  BUK_traditionalism:0 "Bukhara"
